<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BBEFA6"
    android:gravity="center"
    android:orientation="vertical">
    <TextView
        android:id="@+id/question_veggie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jost_medium"
        android:gravity="center"
        android:text="@string/question_veggie"
        android:padding="15dp"
        android:textSize="30sp" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/true_btn"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#234320"
            android:clickable="true"
            android:orientation="horizontal"
            android:text="@string/true_btn"
            android:layout_margin="10dp"
            android:textColorLink="@color/white"
            android:textStyle="normal" />

        <Button
            android:id="@+id/false_btn"
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#234320"
            android:clickable="true"
            android:orientation="horizontal"
            android:text="@string/false_btn"
            android:layout_margin="10dp"
            android:textColorLink="@color/white"
            android:textStyle="normal" />
    </LinearLayout>
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_btn"
            style="?android:attr/buttonBarStyle"
            android:layout_width="53dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#00FFFFFF"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            app:icon="@drawable/baseline_arrow_back_ios_24"
            app:iconTint="#000000" />

        <Button
            android:id="@+id/next_btn"
            style="?android:attr/buttonBarStyle"
            android:layout_width="53dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#00FFFFFF"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            app:icon="@drawable/baseline_arrow_forward_ios_24"
            app:iconTint="#000000" />
    </LinearLayout>

</LinearLayout>

